scoped子組件吃不到

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -2,4 +2,4 @@
 @import "./helpers/variables";
 @import "~bootstrap/scss/bootstrap";
 
-@import "./pages/dashboard";
+// @import "./pages/dashboard";
