--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -3,6 +3,8 @@
 @import "~bootstrap/scss/bootstrap";
 
 
+//中文字體,"Microsoft JhengHei"
+//數字字體 "Yu Gothic"
 @import "./helpers/util";
 // @import "./pages/dashboard";
 @import "./pages/product-list";
