--- a/src/assets/scss/helpers/_util.scss
+++ b/src/assets/scss/helpers/_util.scss
@@ -20,3 +20,27 @@
 .flex-4{
     flex: 4;
 }
+
+.d-inline-flex{
+    display:inline-flex!important
+}
+
+.fw-b{
+    font-weight: bold;
+}
+
+.fz-1{
+    font-size: 28px;
+}
+.fz-2{
+    font-size: 24px;
+}
+.fz-3{
+    font-size: 20px;
+}
+.fz-4{
+    font-size: 16px;
+}
+.fz-5{
+    font-size: 12px;
+}
