--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -5,6 +5,7 @@
 
 //中文字體,"Microsoft JhengHei"
 //數字字體 "Yu Gothic"
+@import "./helpers/base";
 @import "./helpers/util";
 // @import "./pages/dashboard";
 @import "./pages/product-list";
