其他後台modal改用成slot複用

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/functions";
 @import "./helpers/variables";
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap";//@@重複
 
 
 @import "~bootstrap";//一次元件全部導入 @@之前沒加好像沒事
