優惠券列表

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -10,5 +10,8 @@
 //數字字體 "Yu Gothic"
 @import "./helpers/base";
 @import "./helpers/util";
+
+@import "./components/modal";
+
 // @import "./pages/dashboard";
 @import "./pages/product-list";
