產品&圖片列表

--- a/src/assets/scss/helpers/_util.scss
+++ b/src/assets/scss/helpers/_util.scss
@@ -49,6 +49,13 @@
     overflow-x: auto;
 }
 
+.overflow-x-hidden{
+    overflow-x: auto;
+}
+
 .overflow-y-auto{
+    overflow-y: auto;
+}
+.overflow-y-hidden{
     overflow-y: auto;
 }
