promise.all刪除本頁產品&後台調整

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -12,6 +12,7 @@
 @import "./helpers/util";
 
 @import "./components/modal";
+@import "./components/pagination";
 
 // @import "./pages/dashboard";
 @import "./pages/product-list";
