--- a/src/assets/scss/helpers/_util.scss
+++ b/src/assets/scss/helpers/_util.scss
@@ -38,6 +38,11 @@
 .fz-3{
     font-size: 20px;
 }
+
+.fz-35{
+    font-size: 18px;
+}
+
 .fz-4{
     font-size: 16px;
 }
@@ -58,4 +63,20 @@
 }
 .overflow-y-hidden{
     overflow-y: auto;
+}
+
+.border-radius-0{
+  border-radius: 0;
+}
+
+.border-radius{
+  border-radius: $border-radius;
+}
+
+.border-radius-sm{
+  border-radius:$border-radius-sm;
+}
+
+.border-radius-lg{
+  border-radius:$border-radius-lg;
 }
