網址分頁&啟用開關

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -13,6 +13,7 @@
 
 @import "./components/modal";
 @import "./components/pagination";
+@import "./components/switch";
 
 // @import "./pages/dashboard";
 @import "./pages/product-list";
