產品列表切版

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,9 +1,7 @@
 @import "~bootstrap/scss/functions";
 @import "./helpers/variables";
-// @import "~bootstrap/scss/bootstrap";//@@重複
-
-
-@import "~bootstrap";//一次元件全部導入 @@之前沒加好像沒事
+@import "~bootstrap/scss/bootstrap";//@@重複
+// @import "~bootstrap";//一次元件全部導入 @@之前沒加好像沒事
 
 
 //中文字體,"Microsoft JhengHei"
