--- a/src/assets/scss/helpers/_mixin.scss
+++ b/src/assets/scss/helpers/_mixin.scss
@@ -1,3 +1,9 @@
+//@@
+// @mixin shadow($w:0,$h:.5rem,$blur:1rem,$color,$spread:0) {
+@mixin shadow($w:0,$h:.5rem,$blur:1rem,$color:rgba(0, 0, 0, 0.15)) {
+    box-shadow:$w $h $blur $color;
+    // box-shadow:0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
 
 @mixin flex($hov:space-between,$col:center){
   display:flex;
