產品內頁下半部+布局

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -6,6 +6,7 @@
 
 //中文字體,"Microsoft JhengHei"
 //數字字體 "Yu Gothic"
+@import "./helpers/reset";
 @import "./helpers/base";
 @import "./helpers/util";
 @import "./helpers/mixin";
