--- a/src/assets/scss/helpers/_reset.scss
+++ b/src/assets/scss/helpers/_reset.scss
@@ -13,9 +13,10 @@
 // a{
 //   text-decoration: none;
 // }
-// ul,li{
-//   list-style: none;
-// }
+ul{
+  list-style: none;
+  padding-left: 0;
+}
 // input{
 //   font: normal;
 // }
