--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -5,8 +5,9 @@
 $brand-primary:#C9420D;
 $brand-secondary-green:#3F3B00;
 $brand-secondary1:#3F3B00;
+$brand-secondary1-light:#827E61;
 $brand-secondary-coffee:#4E3111; 
-$brand-secondary2:#4E3111; 
+$brand-secondary2:#4E3111;
 $brand-background:#F2F2F2;
 $brand-gray:#707070;
 // Color system
