產品內頁-購買產品&隨機廣告產品

--- a/src/assets/scss/pages/_product-single.scss
+++ b/src/assets/scss/pages/_product-single.scss
@@ -19,7 +19,6 @@
       }
     }
   }
-
   .thumbImgs{
     // overflow: hidden;
     // margin: 0 -10px;//##!蝦皮 但會出現卷軸失敗
@@ -241,7 +240,10 @@
   }
 
   &__infoBox{
-     
+    //  flex-shrink: 1;
+     width: 78%;
+    // flex: 1;
+    // flex: 1 1 1px;
   }
   
   &__title{
