--- a/src/assets/scss/module/_shopping.scss
+++ b/src/assets/scss/module/_shopping.scss
@@ -15,3 +15,32 @@
     padding: 1.5rem;
   }
 }
+
+// .shoppingInfo{
+
+//   &__cardHeader{
+
+//   }
+
+//   &__cardBody{
+
+//   }
+// }
+
+.cartSummary{
+  // margin-top: 77px;
+  overflow: hidden;
+  color: $brand-secondary1-light;
+  border-radius: 20px;
+  &__header{
+    text-align: center;
+    font-size: 23px;
+    background-color: #fff;
+    
+    // color: ;
+  }
+
+  &__body{
+    font-size: 17px;
+  }
+}
