--- a/src/assets/scss/pages/shopping/_orderSuccess.scss
+++ b/src/assets/scss/pages/shopping/_orderSuccess.scss
@@ -1,12 +1,27 @@
 .orderSuc{
 
-  &__pic{
+  &__bg{
     // width: 1174px;
     width: 100%;
     height: 551px;
     // margin: 0 auto;
     margin-bottom: 41px;
     border:1px solid $brand-secondary1;
+    position: relative;
+  }
+
+  &__box{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+
+  &__title{
+    background-color: rgba(0, 0, 0, .7);
+    color:#fff;
+    font-size: 2rem;
+    letter-spacing: 10px;
   }
 
   &__numId{
