--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -19,6 +19,9 @@
 // ##模組
 @import "./module/shopping";
 
+
+@import "./pages/index";
+
 // @import "./pages/dashboard";
 @import "./pages/product-list";
 @import "./pages/product-single";
