--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -33,3 +33,13 @@
 @import "./pages/shopping/orderInfo";
 @import "./pages/shopping/orderConfirm";
 @import "./pages/shopping/orderSuccess";
+
+
+
+// @import "~vue2-editor/dist/vue2-editor.css";//##套件css改放main.js
+
+// /* Import the Quill styles you want */
+// // @import '/node_modules/quill/dist/quill.core.css';
+// @import '~quill/dist/quill.core.css';
+// @import '~quill/dist/quill.bubble.css';
+// @import '~quill/dist/quill.snow.css';
