建立願望清單功能(有mixin&無mixin)

--- a/src/assets/scss/components/_productCard.scss
+++ b/src/assets/scss/components/_productCard.scss
@@ -19,6 +19,17 @@
     }
   }
 
+  &__favoriteBadge{
+    position: absolute;
+    z-index: 10;//%%竟然因沒加z-index vue click不到
+    bottom: 4px;
+    right: 13px;
+    font-size: 22px;
+    color: #fff;
+    cursor: pointer;
+
+  }
+
   &__body{
 
   }
