--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -15,6 +15,7 @@
 @import "./components/switch";
 @import "./components/productCard";
 @import "./components/customerForm";
+@import "./components/navFooter";
 
 // ##模組
 @import "./module/shopping";
