--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -21,7 +21,7 @@
 @import "./module/shopping";
 
 
-@import "./pages/index";
+@import "./pages/homePage";
 @import "./pages/aboutUs";
 
 // @import "./pages/dashboard";
